--- a/style.css
+++ b/style.css
@@ -1,3 +1,69 @@
-<style>
+*{
+    
+    box-sizing: border-box;
+}
 
-</style>
+body{
+    
+    /* min-height: 100vh; */
+    margin: 0; 
+    padding: 0;
+     
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+    font-family: 'Oswald', sans-serif;
+}
+
+
+@font-face {
+    font-family: Roboto;
+     src: url("assets/fonts/Oswald.ttf");
+}
+
+.header {
+    border-bottom: 5px solid rgb(72, 255, 0);
+    background-color: #829985;
+}
+.img {
+    width: 150px;
+    height: 150px ;
+}
+.main{
+    width: 100%;
+}
+
+.container {
+    max-width: 1440px;
+    margin: 0 auto;
+  }
+
+  .nav-list {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+
+  html {
+    scroll-behavior: smooth; 
+  }
+
+  .nav-list {
+    list-style: none;
+    ;
+  }
+
+  .nav-link {
+    padding: 0 20px;
+    line-height: 50px;
+    text-decoration: none;
+    color: rgb(242, 242, 243);
+    font-size: 30px;
+    transition: color 1s;
+  }
+
+ .nav-link:hover{
+    color: rgb(72, 255, 0); /* Цвет ссылки при наведении на нее курсора мыши */  
+    text-decoration: underline; /* Добавляем подчеркивание */
+ }
