--- a/style.css
+++ b/style.css
@@ -67,3 +67,45 @@ body{
     color: rgb(72, 255, 0); /* Цвет ссылки при наведении на нее курсора мыши */  
     text-decoration: underline; /* Добавляем подчеркивание */
  }
+
+ .main-container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 20px;
+  }
+  
+  #profile {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    border-bottom: 5px solid black;
+    padding-bottom: 20px;
+    
+  }
+ 
+
+  @media (max-width: 768px) {
+    .section {
+      width: 100%;
+    }
+  }
+  .profilelogo {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+    box-shadow: 0 1px 4px rgb(0 0 0 / 60%);
+    filter: grayscale(0.2) brightness(1.05);
+    transition: .3s;
+  }
+  .section-profile-title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+    text-transform: uppercase;
+  }
