--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -12,3 +12,20 @@
     left: 0px;
     top: 0px;
 }
+
+
+  .nav-list {
+    display: flex;
+    justify-content: flex-end;
+    /* align-items: center;
+    padding: 0 20px; */
+    /* line-height: 50px; */
+    /* flex-direction: column; */
+  /* justify-content: space-between; */
+    
+   
+  }   
+
+  .nav-list {
+    list-style: none;
+  }
