--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -46,14 +46,14 @@ html {
   padding: 0 20px;
   line-height: 40px;
 }
-
+/* стиль кнопки после посещения  */
 a, a:visited{
     color: #fff;
     text-decoration: none;
 }
 
-
-a:hover{
+/* стиль кнопки при наведении  */
+a:hover{                            
     text-decoration: none;
     color: #bdae82;
     
@@ -80,18 +80,35 @@ a:hover{
     left: 228px;
 }
 
+.h1{
+   width: 352px;
+   height: 120px; 
+   font-size: 60px;
+   line-height: 120px;
+   font-family:Arial, Helvetica, sans-serif ;  
+   /* нужно изменить шрифт */
+}
+
 .hero-button{
     height: 55px;
     width: 155px;
     background-color: #bdae82;
     text-align: center;
-    
+    size: 20px;
+    line-height: 40px; 
+    left: 0%;
+    right: 0%;
+    margin-top: 2px;
+  
 }
 
+.text-button{
+    
+}
 .skills{
     height: 482px;
     width: 1440px;
-    background-color: blue;
+    background-color: black;
 }
 .portfolio{
     height: 1500px;
@@ -118,3 +135,49 @@ a:hover{
     display: flex;
     flex-direction: column;
 }
+.hero-text{
+    font-family: ;
+    font-style:normal ;
+    font-weight:normal ;
+    font-size: 20px;
+    line-height: 40px;
+    /* height: 160px; */
+    top: 130px;
+    left: 0%;
+    right: 6%;
+}
+
+.skills{
+/* position: relative; */
+}
+.section-title{
+   height: 80px;
+   width: 700px;
+   margin-left: 370px;
+   margin-right: 370px;
+   margin-top: 100px;
+  
+   
+    /* background-color: red; */
+    
+    text-align: center;
+ 
+    background-image: linear-gradient(to top, #000 39px, #bdae82 39px, #bdae82 41px, #000 41px);
+      
+  
+}
+
+
+
+    
+.span{
+      width: 130px;
+    height: 80px;
+    position: absolute;
+    margin-left: 294px;
+    margin-top: 8px;
+    background-color: black;
+    font-size: 50px;
+}
+   
+
