feat: final skills

--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -211,6 +211,10 @@ a:hover {
   padding-left: 20px;
 }
 
+/* .skill-video{
+  padding-bottom: ;
+} */
+
 /* .skill-photo {
   background: url(/rsschool-cv/portfolio/assets/svg/camera\ 1.svg)  center top
     no-repeat ;
@@ -223,9 +227,9 @@ a:hover {
 /* .skill-video {
     background: url(/rsschool-cv/portfolio/assets/svg/video\ 1.svg) center top no-repeat;
 } */
-.skill-retouch {
+/* .skill-retouch {
     background: url(/rsschool-cv/portfolio/assets/svg/image\ 1.svg) center top no-repeat;
 }
 .skill-audio{
     background: url(/rsschool-cv/portfolio/assets/svg/mic\ 1.svg) center top no-repeat;
-}
+} */
