--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -134,7 +134,7 @@ a:hover {
   flex-direction: column;
 }
 .hero-text {
-  font-family: ;
+  /* font-family: ; */
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -233,5 +233,45 @@ a:hover {
 }
 
 
+.seasons{
+  /* width: 895px; */
+  height: 55px;
+  top: 240px;
+  left: 272px;
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+  padding-top: 60px;
+
+}
+
+.season{
+  width: 220px;
+  height: 55px;
+  text-align: center;
+  font-size: 20px;
+  
+  /* background-color: red; */
+  /* border-color: white; */
+
+  border: 2px solid #bdae82;
+  background-color: black;
+  /* color: black; */
+  /* padding: 14px 28px; */
+  /* font-size: 16px; */
+  cursor: pointer;
+  
+
+/*   
+  border-color: solid #bdae82; */
+    color: #bdae82;
+
+
+
+}
+.season:hover{
+ background-color: #bdae82;
+ color: black;
+}
 
 
