--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -274,4 +274,13 @@ a:hover {
  color: black;
 }
 
+.portfolio-items{
+  justify-content: center;
+  display: flex;
+  gap: 25px;
+  padding-top: 60px;
+  
+  /* display: inline-block; */
+  flex-wrap: wrap;
+}
 
