--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -116,12 +116,12 @@ a:hover {
 .video {
   height: 945px;
   width: 1440px;
-  background-color: burlywood;
+  background-color: black;
 }
 .price {
   height: 845px;
   width: 1440px;
-  background-color: chartreuse;
+  background-color: black;
 }
 
 .contacts {
@@ -184,6 +184,15 @@ a:hover {
   position: absolute;
   margin-left: 249px;
   margin-top: 8px;
+  background-color: black;
+  font-size: 50px;
+}
+.span3 {
+  width: 160px;
+  /* height: 80px; */
+  position: absolute;
+  margin-left: 293px;
+  padding-top: 8px;
   background-color: black;
   font-size: 50px;
 }
@@ -284,3 +293,16 @@ a:hover {
   flex-wrap: wrap;
 }
 
+.player{
+
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 60px;
+
+}
+
+.play{
+  position: absolute;
+}
