--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -1,3 +1,16 @@
+@font-face {
+  font-family: Merriweather, serif;
+  src: url("/rsschool-cv/portfolio/assets/fonts/Merriweather/Merriweather-Bold.ttf");
+  font-weight: 700;
+}
+@font-face {
+  font-family: 'Inter';
+  src: url("/rsschool-cv/portfolio/assets/fonts/Inter/static/Inter-Regular.ttf");
+  font-weight: 400;
+}
+
+
+
 * {
   margin: 0;
   padding: 0;
@@ -90,7 +103,7 @@ a:hover {
   height: 120px;
   font-size: 60px;
   line-height: 120px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Merriweather;
   /* нужно изменить шрифт */
 }
 
