--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -447,3 +447,28 @@ footer{
 .section-contacts{
   padding-top: 100px;
 }
+
+.contacts-conteiner{
+
+  width: 445px;
+  height: 450px;
+
+}
+
+.img-cont{
+  position: relative;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  /* padding-top: 60px; */
+  
+  
+}
+
+.contacts-conteiner{
+  position: absolute;
+  background-color: red;
+  margin-right: 20px;
+  margin-top: 60px;
+  
+}
