--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -4,12 +4,10 @@
   font-weight: 700;
 }
 @font-face {
-  font-family: 'Inter';
+  font-family: "Inter";
   src: url("/rsschool-cv/portfolio/assets/fonts/Inter/static/Inter-Regular.ttf");
   font-weight: 400;
 }
-
-
 
 * {
   margin: 0;
@@ -21,22 +19,14 @@ html {
   scroll-behavior: smooth;
 }
 
-/* body{
-  width: 1440px;
-} */
+
 .container {
   width: 1440px;
   margin: 0 auto;
   padding: 0 20px;
   color: blanchedalmond;
 }
-/* .background {
-    width: 1440px;
-   height: 910px;
-   left: 0px;
-   top: 0px;  
-   
-} */
+
 .header {
   background-image: url(/rsschool-cv/portfolio/assets/img/bg.jpg);
   background-repeat: no-repeat;
@@ -44,7 +34,6 @@ html {
   height: 127px;
   position: relative;
 }
-
 
 .logo {
   background-image: url(/rsschool-cv/portfolio/assets/svg/logo.svg);
@@ -428,47 +417,112 @@ a:hover {
   line-height: 40px;
   color: black;
 }
-footer{
+
+
+.section-contacts {
+  height: 700px;
+  background-image: url(/rsschool-cv/portfolio/assets/img/contacts.jpg);
+  display: flex;
+  justify-content: right;
+  width: 1440px;
+  
+}
+
+.contacts-conteiner {
+  width: 450px;
+  height: 445px;
+  /* background-color: red; */
+  margin-right: 20px;
+  margin-top: 60px;
+}
+
+.title-contact{
+
+width: 450px;
+height: 80px;
+left: calc(50% - 450px/2 + 475px);
+top: 60px;
+
+font-family: Merriweather;
+font-style: normal;
+font-weight: bold;
+font-size: 40px;
+line-height: 80px;
+
+}
+#mail {
+  width: 446px;
+  height: 46px;
+  border-color: #bdae82;
+  background: transparent;
+}
+#tel{
+  width: 446px;
+  height: 46px;
+  border-color: #bdae82;
+  background: transparent;
+  margin-top: 20px;
+}
+
+#mail::placeholder {
+  font-family: inherit;
+  color: #bdae82;
+  font-size: 20px;
+  padding-left: 20px;
+  padding-top: 5px;
+  line-height: 40px;
+  font-family: inter sans-serif;
+  
+}
+#tel::placeholder {
+  font-family: inherit;
+  color: #bdae82;
+  font-size: 20px;
+  padding-left: 20px;
+  line-height: 40px;
+  font-family: inter sans-serif;
+}
+
+#comment::placeholder{
+  font-family: inherit;
+  color: #bdae82;
+  font-size: 20px;
+  padding-left: 20px;
+  line-height: 40px;
+  font-family: inter sans-serif;
+}
+
+
+textarea{
+  width: 446px;
+  height: 100px;
+  border-color: #bdae82;
+  background: transparent;
+  margin-top: 20px;
+  
+} 
+
+.button-cont{
+  
+  text-align: center;
+  width: 220px;
+  height: 55px;
+  margin-top: 30px;
+  
+  
+  background-color: #bdae82;
+  font-size: 20px;
+  line-height: 40px;
+  font-family: inter sans-serif;
+  color: #000;
+}
+
+.footer-container {
   height: 150px;
   background-color: black;
   width: 1440px;
   margin: 0 auto;
-  /* padding: 0 20px; */
+  padding: 0 20;
   
-  
-}
-
-/* .img-contacts{
-  
-  height: 700px;
-  padding-top: 100px;
-  
-} */
-.section-contacts{
-  padding-top: 100px;
-}
-
-.contacts-conteiner{
-
-  width: 445px;
-  height: 450px;
-
-}
-
-.img-cont{
-  position: relative;
-  display: flex;
-  justify-content: right;
-  align-items: center;
-  /* padding-top: 60px; */
-  
-  
-}
-
-.contacts-conteiner{
-  position: absolute;
-  background-color: red;
-  margin-right: 20px;
-  margin-top: 60px;
   
 }
