--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -36,12 +36,14 @@ html {
 }
 
 .logo {
-  background-image: url(/rsschool-cv/portfolio/assets/svg/logo.svg);
+  /* background-image: url(/rsschool-cv/portfolio/assets/svg/logo.svg); */
   position: absolute;
   width: 50px;
   height: 50px;
   left: 60px;
   top: 20px;
+  background: transparent;
+  border: none;
 }
 .nav-list {
   display: flex;
@@ -586,11 +588,17 @@ display: flex;
 }
 
 .Social{
-  width: 188px;
-  height: 150px;
-  line-height: 50px;
+  
   text-align: center;
   display: flex;
-  /* background-color: white; */
+  width: 188px;
+  justify-content: space-between;
   
+}
+
+.Social-list{
+  display: flex;
+ align-items: center;
+ justify-content: space-around;
+ width: 188px;
 }
