--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -28,38 +28,59 @@ html {
 }
 
 .header {
-  background-image: url(/rsschool-cv/portfolio/assets/img/bg.jpg);
+  background-image: url(../portfolio/assets/img/bg.jpg);
   background-repeat: no-repeat;
   background-position: center 0;
   height: 127px;
   position: relative;
 }
 
+.background{
+  display: flex;
+  justify-content: space-around;
+  padding-top: 20px;
+}
 .logo {
-  /* background-image: url(/rsschool-cv/portfolio/assets/svg/logo.svg); */
-  position: absolute;
-  width: 50px;
-  height: 50px;
-  left: 60px;
-  top: 20px;
+ width: 50px;
+ height: 50px;
+ 
   background: transparent;
   border: none;
+  padding-left: 20px;
+  background-size: contain;
+  background-repeat: no-repeat;  
+  transition: 0.3s;
 }
+
+.logo:hover {
+  filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%)
+    contrast(87%);
+}
+
+
 .nav-list {
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  width: 500px;
+  height: 50px;
+  margin-left: auto
+ 
 }
 
 .nav-link {
-  padding: 0 20px;
-  line-height: 40px;
+  padding: 0 18px;
 }
 /* стиль кнопки после посещения  */
 a,
 a:visited {
   color: #fff;
   text-decoration: none;
+  font-size:20px;
+  line-height: 50px;
+  font-family: inter;
+  style: normal;
+
 }
 
 /* стиль кнопки при наведении  */
@@ -72,12 +93,27 @@ a:hover {
   list-style: none;
 }
 
+.switch-lng{
+  display: flex;
+  justify-content: space-between;
+  height: 50px;
+  width: 70px;
+  /* background-color: tomato; */
+  color: #fff;
+  text-decoration: none;
+  font-size:20px;
+  line-height: 50px;
+  font-family: inter;
+  padding-right: 20px;
+}
+
 .hero {
   background: url(/rsschool-cv/portfolio/assets/img/bg.jpg);
   background-position: center -127px;
   background-repeat: no-repeat;
   height: 783px;
   position: relative;
+ 
 }
 
 .hero-content {
@@ -85,8 +121,21 @@ a:hover {
   color: #fff;
   height: 354px;
   width: 352px;
-  top: 226px;
+  top: 100px; 
   left: 228px;
+  /* padding-bottom: 330px; */
+}
+
+.hero-text {
+  
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 40px;
+  font-family: inter;
+  top: 130px;
+  left: 0%;
+  right: 6%;
 }
 
 .h1 {
@@ -131,6 +180,7 @@ button:hover{
   height: 482px;
   width: 1440px;
   background-color: black;
+  
 }
 hero-button a :hover{
   color: #fff;
@@ -161,17 +211,7 @@ hero-button a :hover{
   display: flex;
   flex-direction: column;
 }
-.hero-text {
-  /* font-family: ; */
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 40px;
-  /* height: 160px; */
-  top: 130px;
-  left: 0%;
-  right: 6%;
-}
+
 
 .skills {
   /* position: relative; */
@@ -182,6 +222,7 @@ hero-button a :hover{
   margin-left: 370px;
   margin-right: 370px;
   margin-top: 100px;
+  color: #bdae82;
 
   /* background-color: red; */
 
@@ -197,42 +238,56 @@ hero-button a :hover{
 }
 
 .span {
-  width: 130px;
+  width: 158px;
   height: 80px;
   position: absolute;
-  margin-left: 294px;
-  margin-top: 8px;
+  margin-left: 272px;
+  /* margin-top: 15px; */
   background-color: black;
-  font-size: 50px;
+  font-size: 40px;
+  line-height: 80px;
+  font-family:  Merriweather ;
+  /* font-size: 40px;
+  line-height: 50px;
+  font-family: Merriweather ; */ 
 }
 
 .span2 {
   width: 220px;
   height: 80px;
   position: absolute;
-  margin-left: 249px;
-  margin-top: 8px;
+  margin-left: 240px;
+  /* margin-top: 8px; */
   background-color: black;
-  font-size: 50px;
+  font-size: 40px;
+  line-height: 80px;
+  font-family:  Merriweather ;
+  
 }
 .span3 {
   width: 160px;
   /* height: 80px; */
   position: absolute;
-  margin-left: 293px;
-  padding-top: 8px;
+  margin-left: 270px;
+  /* padding-top: 8px; */
   background-color: black;
-  font-size: 50px;
+ 
+  font-size: 40px;
+  line-height: 80px;
+  font-family:  Merriweather ;
 }
 
 .span4 {
   width: 160px;
   /* height: 80px; */
   position: absolute;
-  margin-left: 293px;
-  padding-top: 8px;
+  margin-left: 270px;
+ 
   background-color: black;
-  font-size: 50px;
+  
+  font-size: 40px;
+  line-height: 80px;
+  font-family:  Merriweather ;
 }
 .span5 {
   width: 240px;
@@ -247,7 +302,16 @@ hero-button a :hover{
 .skills-items {
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
+  padding-top: 60px;
+
+ 
+}
+
+.skill-header{
+  font-size: 20px;
+  font-family: inter;
+  line-height: 40px;
+
 }
 
 .skills-item {
@@ -258,7 +322,7 @@ hero-button a :hover{
   display: flex;
   flex-direction: column;
   text-align: center;
-  justify-content: space-between;
+  justify-content: space-between; 
 }
 
 .skill-photo .skill-video {
@@ -269,6 +333,8 @@ hero-button a :hover{
   font-size: 18px;
   line-height: 36px;
   padding-top: 20px;
+  font-family: inter;
+  line-height: 36px;
 }
 .skill-text {
   width: 280px;
@@ -351,6 +417,7 @@ hero-button a :hover{
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: #fff;
 }
 
 .title-card {
@@ -359,7 +426,8 @@ hero-button a :hover{
   padding-top: 43px;
   line-height: 56px;
   font-weight: 700;
-  /* font-family: Merriweather; */
+  font-family: Merriweather; 
+  color:#fff;
 }
 
 .price-card {
@@ -367,6 +435,8 @@ hero-button a :hover{
   padding-top: 20px;
   line-height: 48px;
   font-weight: 700;
+  font-family: Merriweather; 
+  color: #bdae82;
   /* display: flex; */
 }
 
@@ -380,60 +450,44 @@ hero-button a :hover{
 
 .num1 {
   display: block;
-  /* margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px; */
-  font-weight: 400;
   line-height: 36px;
-  /* font-family: Inter; */
+  font-size: 18px;
+  font-family: inter;
 }
 
 .num2 {
   display: block;
-  /* margin-block-start: 1em;
-  margin-block-end: 1em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px; */
-  font-weight: 400;
+  font-size: 18px;
+  font-family: inter;
   line-height: 36px;
 }
 .num3 {
   display: block;
-  /* margin-block-start: 1em;
-  margin-block-end: 1em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px; */
-  font-weight: 400;
+  font-size: 18px;
+  font-family: inter;;
   line-height: 36px;
 }
 
 .num4 {
   display: block;
-  /* margin-block-start: 1em;
-  margin-block-end: 1em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px; */
-  font-weight: 400;
+  font-size: 18px;
+  font-family: inter;
   line-height: 36px;
 }
 .num5 {
   display: block;
-  /* margin-block-start: 1em;
-  margin-block-end: 1em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px; */
-  font-weight: 400;
+  font-size: 18px;
+  font-family: inter;
   line-height: 36px;
 }
 
 .order {
   width: 220px;
   height: 55px;
-  text-align: center;
+  margin-top: -11px;
 
   background-color: #bdae82;
-
+  font-family: inter;
   font-size: 20px;
   line-height: 40px;
   color: black;
@@ -450,6 +504,7 @@ hero-button a :hover{
   justify-content: right;
   width: 1440px;
   
+  
 }
 
 .contacts-conteiner {
@@ -457,7 +512,7 @@ hero-button a :hover{
   height: 445px;
   /* background-color: red; */
   margin-right: 20px;
-  margin-top: 60px;
+  margin-top: 53px;
 }
 
 .title-contact{
@@ -465,7 +520,8 @@ hero-button a :hover{
 width: 450px;
 height: 80px;
 left: calc(50% - 450px/2 + 475px);
-top: 60px;
+padding-bottom: 36px;
+padding-top: 16px;
 
 font-family: Merriweather;
 font-style: normal;
@@ -549,7 +605,7 @@ textarea{
 .footer-container {
   height: 150px;
   background-color: black;
-  width: 1400px;
+  width: 1440px;
   margin: 0 auto;
   padding: 0 20;
   display: flex;
