refactor: change url for files

--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: Merriweather, serif;
-  src: url("../portfolio/assets/fonts/Merriweather/Merriweather-Bold.ttf");
+  src: url("./assets/fonts/Merriweather/Merriweather-Bold.ttf");
   font-weight: 700;
 }
 @font-face {
   font-family: "Inter";
-  src: url("../portfolio/assets/fonts/Inter/static/Inter-Regular.ttf");
+  src: url("./assets/fonts/Inter/static/Inter-Regular.ttf");
   font-weight: 400;
 }
 
@@ -28,7 +28,7 @@ html {
 }
 
 .header {
-  background-image: url(../portfolio/assets/img/bg.jpg);
+  background-image: url(./assets/img/bg.jpg);
   background-repeat: no-repeat;
   background-position: center 0;
   height: 127px;
@@ -108,7 +108,7 @@ a:hover {
 }
 
 .hero {
-  background: url(../portfolio/assets/img/bg.jpg);
+  background: url(./assets/img/bg.jpg);
   background-position: center -127px;
   background-repeat: no-repeat;
   height: 783px;
@@ -444,7 +444,7 @@ a:hover {
 }
 .section-contacts {
   height: 700px;
-  background-image: url(../portfolio/assets/img/contacts.jpg);
+  background-image: url(./assets/img/contacts.jpg);
   display: flex;
   justify-content: right;
   width: 1440px;
