--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -33,19 +33,111 @@ html {
   background-position: center 0;
   height: 127px;
   position: relative;
+}
+
+
+
+.hamburger {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  user-select: none;
+  z-index: 2;
+  display: none;
+}
+
+.line {
+  width: 80%;
+  height: 2px;
+  background: white;
+  margin: 3px 0;
+  z-index: 15;
+  transition: all 0.3s ease-in-out;
+}
+
+.hamburger.open .line1 {
+  transform: rotate(-45deg) translate(-5px, 6px);
+ /* width: 40px;
+ height: 50px; */
+}
+
+.hamburger.open .line2 {
+  opacity: 0;
+ 
   
 }
 
+.hamburger.open .line3 {
+  transform: rotate(45deg) translate(-5px, -6px);
+}
+.right-menu{
+  height: 300px;
+  width: 200px;
+  background-color: #000;
+  position: absolute;
+  left: 100%;
+  transition: 1s;
+
+}
+
+.right-menu ul li{
+  list-style: none;
+}
+
+.open-menu{
+   
+  left: 20% ;
+}
+.right-menu{
+  display: none;
+}
+
 @media (max-width: 768px) {
+
+  .right-menu{
+    display: block;
+    /* left: 20%; */
+  }
   
+
+  /* новый код */
  
-  
+ /* новый код */
+
+ .toggleMenu{
+width: 300px;
+height: 300px;
+background-color: black;
+
+ }
+
+
+  .hamburger {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    user-select: none;
+    z-index: 2;
+   
+  }
+  .nav-link{
+    display: none;
+  }
+
   .header{
     justify-content: space-around;
     max-width: 768px;
-    
-    
+    display: flex;
   }
+
   .logo{
    
     padding: 0px 20px 0px 20px;
